Use a lighter MD button stroke on Mac, but not on Retina, when not Harmony.

The button stroke is based on text color, which changes under Harmony.

Without full Harmony, the text is black and the button stroke looks
too dark on non-retina Mac screens. Compensate, and allow us to explore
whether we want special retina/non-retina logic for the button stroke
on Mac for full Harmony as well.

Bug: 762321
Change-Id: I7818478423a7aeb0706d107305605f6541d4a092
Reviewed-on: https://chromium-review.googlesource.com/651946
Commit-Queue: Trent Apted <tapted@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499875}
Former-commit-id: 3d1dafe6de22865f9525143501e4aa44a9a56354